attempt to rebuild scss

--- a/main_styles.css
+++ b/main_styles.css
@@ -294,7 +294,7 @@ section.TechLogos img {
 }
 
 #wordleClone {
-    background-image: url('images/WordleClone.PNG');
+    background-image: url('./images/WordleClone.PNG');
     width: 250px;
     height: 310px;
     background-repeat:no-repeat;
