--- a/scss/contact.scss
+++ b/scss/contact.scss
@@ -1,29 +1,75 @@
+@import 'menu';
 @import 'config';
 
 @mixin transition-ease {
   transition: all 0.5s ease-in-out;
 }
 
-body {
-  background-color: $primary-background;
-  color: $primary-text-colour;
-  height: 100vh;
-  font-family: consolas;
-  line-height: 1;
+h2 {
+  padding-top: 4rem;
+  text-align: center;
+}
 
+h3 {
+  padding: 0.8rem;
+  font-size: 0.9rem;
+  text-align: justify;
+  text-justify: inter-character;
+}
 
-  @include desktop {
+form {
+  background: rgb(223, 223, 223);
+  color: black;
+  margin: 3rem 0rem;
+  padding: 1rem;
 
+  h2 {
+    padding: 1rem;
   }
-}
 
-.logo {
-  top: 0;
-}
+  label {
+    display: block;
+    padding: 0.5rem;
+    padding-bottom: 0.7rem;
+    margin: 0.2rem;
+    margin-bottom:0;
+    
+    input {
+      padding: 0.1rem;
+      float: right;
+      clear: both;
+      width: 60%;
+    }
+  }
 
-a {
-  color: $primary-text-colour;
-  text-decoration: none;
+  .submit-div {
+    display: flex;
+
+    input {
+      flex: 1;
+      background-color: green;
+      border: rgb(1, 94, 1) solid 2px;
+      border-radius: 1rem;
+      padding: 0.2rem;
+      margin: 0.5rem;
+      &[type=reset] {
+        background: red;
+        border: rgb(82, 0, 0) solid 2px;
+      }
+    }
+  }
+
+  .form-email-section {
+    margin-top: 2rem;
+
+    label {
+      margin: 1rem 0rem;
+    }
+
+    textarea {
+      width: 100%;
+    }
+  }
 }
 
 .menu-btn {
