--- a/scss/contact.scss
+++ b/scss/contact.scss
@@ -13,8 +13,7 @@ h2 {
 h3 {
   padding: 0.8rem;
   font-size: 0.9rem;
-  text-align: justify;
-  text-justify: inter-character;
+  text-align: center;
 }
 
 form {
@@ -22,6 +21,14 @@ form {
   color: black;
   margin: 3rem 0rem;
   padding: 1rem;
+
+  @include desktop {
+    margin: 1rem 2rem;
+    padding: 1rem;
+    min-width: min-content;
+    max-width: 50%;
+    margin: 0 auto;
+  }
 
   h2 {
     padding: 1rem;
