--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,11 +3,6 @@
 @import 'menu';
 @import 'config';
 
-@function weight($weight-name) {
-  @return map-get($font-weights, $weight-name);
-}
-
-
 
 body {
   background-color: $primary-background;
@@ -147,6 +142,15 @@ main {
         }
 
         .displayCol {
+
+          #certification {
+            background-image: url('../../images/Waiting_Monochromatic.svg');
+            width: 300px;
+            height: 300px;
+            background-repeat: no-repeat;
+            background-size:contain;
+            display: block;
+          }
 
 
           #wordleClone {
